Added Basic Layout for Header and Main - No Functions

--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome!</title>
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/Cookbook/css/style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+
+    <header>
+      <img src="/Cookbook/images/MoKitchenLogo_bg_d2232a.png">
+      <nav id="navHeader">
+        <button class="navButton">Breakfast</button>
+        <button class="navButton">Lunch</button>
+        <button class="navButton">Dinner</button>
+      </nav>
+    </header>
+
+    <main>
+      <section id="introTxt"> 
+        <h2>Welcome to Mo's Kitchen</h1>
+        <p>
+          Welcome to Mo's Kitchen, where every page turns into a culinary journey! <br>
+          We're thrilled to have you join our flavorful community of food enthusiasts.<br>
+          Dive into a world where recipes come to life, and kitchen creativity knows no bounds.<br>
+          Whether you're a seasoned chef or a kitchen newbie, our cookbook-themed haven is <br>
+          filled with inspiration, tips, and mouthwatering delights. <br>
+          Get ready to embark on a delicious adventure - because here, <br>
+          cooking is not just a task, it's a celebration of taste, culture, and the joy of sharing. <br>
+          Let the culinary exploration begin!
+        </p>
+      </section>
+
+      <section class="foodDisplay">
+        <h2>What should I eat today?</h2>
+        <p id="foodDisplayP">
+          Get ready for a taste sensation! <br>
+          Our daily dish recommendations are here to rescue your mealtime monotony.<br>
+          Whether you're kickstarting your day with a killer breakfast, powering through lunch,<br>
+          or winding down with a dinner to remember, we've got you covered.<br>
+          Expect a mix of flavors that'll make your taste buds do a happy dance.<br>
+          Dive into our daily picks and make every meal a delicious adventure!
+        </p>
+        <div id="foodDisplayIconContainer">
+          <button id="pancakes" class="foodIcon"></button>
+          <button id="schnitzel" class="foodIcon"></button>
+          <button id="goatCheeseSalad" class="foodIcon"></button>
+        </div>
+      </section>
+    </main>
+
     <footer></footer>
   </body>
 </html>
