--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome!</title>
+    <title>Coock Book</title>
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body></body>
+  <body>
+
+    <footer  class="footer">
+      <div class="footer-container">
+
+        <div class="footer-social">
+          <a class="social-icon" href=""><i class='bx bxl-youtube'></i></a>
+          <a class="social-icon" href=""><i class='bx bxl-instagram'></i></a>
+          <a class="social-icon" href=""><i class='bx bxl-facebook'></i></a>
+          <a class="social-icon" href=""><i class='bx bxl-pinterest'></i></a>
+          
+        </div>
+
+        <div class="footer-link-container">
+          <div class="Footer-link"><a href="">Home </a></div>
+          <div class="Footer-link"><a href="">Contact </a></div>
+          <div class="Footer-link"><a href="">Delivery </a></div>
+          <div class="Footer-link"><a href="">Locations</a></div>
+      </div>
+
+      <div class="footer-copyWrite">
+        <h3>Healthy Food, Crafted With 🎔 in Germany</h3>
+        <p>&copy Mo's Kitchen - 2024</p>
+      </div>
+      </div>
+    </footer>
+  </body>
 </html>
