--- a/html/index.html
+++ b/html/index.html
@@ -53,5 +53,30 @@
       </section>
     </main>
 
+    <footer  class="footer">
+      <div class="footer-container">
+
+        <div class="footer-social">
+          <a class="social-icon" href=""><i class='bx bxl-youtube'></i></a>
+          <a class="social-icon" href=""><i class='bx bxl-instagram'></i></a>
+          <a class="social-icon" href=""><i class='bx bxl-facebook'></i></a>
+          <a class="social-icon" href=""><i class='bx bxl-pinterest'></i></a>
+          
+        </div>
+
+        <div class="footer-link-container">
+          <div class="Footer-link"><a href="">Home </a></div>
+          <div class="Footer-link"><a href="">Contact </a></div>
+          <div class="Footer-link"><a href="">Delivery </a></div>
+          <div class="Footer-link"><a href="">Locations</a></div>
+      </div>
+
+      <div class="footer-copyWrite">
+        <h3>Healthy Food, Crafted With 🎔 in Germany</h3>
+        <p>&copy Mo's Kitchen - 2024</p>
+      </div>
+      </div>
+    </footer>
+
   </body>
 </html>
