adjusted image filepath

--- a/html/index.html
+++ b/html/index.html
@@ -6,13 +6,13 @@
     <title>Coock Book</title>
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-    <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
+    <link rel="icon" type="image" href="./images/MoKitchenLogo_bg_d2232a.png"/>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     
     <header>
-      <img src="/Cookbook/images/MoKitchenLogo_bg_d2232a.png">
+      <img src="../images/MoKitchenLogo_bg_d2232a.png">
       <nav id="navHeader">
         <button class="navButton">Breakfast</button>
         <button class="navButton">Lunch</button>
