chnaged margins, fixed favicon

--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome!</title>
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-
-    <link rel="icon" type="image" href="./images/MoKitchenLogo_bg_d2232a.png"/>
+    <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png"/>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
@@ -64,36 +63,25 @@
             Ingredients for 2 servings
             </p>
             <ul>
-              <li>80 g
-                fine oat flakes</li>
-              <li>2 tbsp
-                linseed</li>
-              <li>300 ml
-                oat drink (oat milk)</li>
-              <li>
-                salt</li>
-              <li>½ tsp
-                turmeric</li>
-              <li>½ tsp
-                cinnamon</li>
-              <li>1
-                persimmons</li>
-              <li>100 g
-                carrots</li>
-              <li>20 g
-                hazelnuts</li>
-              <li>2 tbsp
-                Coconut oil</li>
-              <li>1 tbsp
-                cocoa powder</li>
+              <li>80 g fine oat flakes</li>
+              <li>2 tbsp linseed</li>
+              <li>300 ml oat drink (oat milk)</li>
+              <li>salt</li>
+              <li>½ tsp turmeric</li>
+              <li>½ tsp cinnamon</li>
+              <li>persimmons</li>
+              <li>100 g carrots</li>
+              <li>20 g hazelnuts</li>
+              <li>2 tbsp coconut oil</li>
+              <li>1 tbsp cocoa powder</li>
             </ul>
         </div>
         </div>
         <div class="recipeBody">
           <h4>
-          Preparation steps</h4>
+          Preparation steps
+        </h4>
 <ol>
-
 <li>Mix the oat flakes together with linseed, oat drink and salt, turmeric and cinnamon. Cut the persimmon into small cubes, finely grate the carrot and mix both into the mixture. Then place in the refrigerator for at least 2 hours, preferably overnight.
 </li>
 <li>
