added Food Display

--- a/html/breakfastNoVeg.html
+++ b/html/breakfastNoVeg.html
@@ -5,7 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Breakfast</title>
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="../images/MoKitchenLogo_bg_d2232a.png">
+      <nav id="navHeader">
+        <button class="navButton">Breakfast</button>
+        <button class="navButton">Lunch</button>
+        <button class="navButton">Dinner</button>
+      </nav>
+    </header>
+
+    <main>
+
+    <section class="foodDisplayBreakfast">
+      <h2>Breakfast</h2>
+      <p id="foodDisplayP">
+      Our non Vegan Options   
+      </p>
+      <div class="foodDisplayIconContainer">
+        <button id="beeren_icecream_minze" class="foodIcon">
+          <div class="text-overlay">
+            <p>Icecream Minze</p><br>
+            <p>Prep time: 15 min</p>
+          </div>
+        </button>
+        <button id="chocolate_shell_oats" class="foodIcon">
+          <div class="text-overlay">
+            <p>Chocolate Shell Oats</p><br>
+            <p>Prep time: 10 min</p>
+          </div>
+        </button>
+        <button id="haferschleim" class="foodIcon">
+          <div class="text-overlay">
+            <p>haferschleim</p><br>
+            <p>Prep time: 5 min</p>
+          </div>
+        </button>
+        <button id="hummus_ohne_tahini" class="foodIcon">
+          <div class="text-overlay">
+            <p>Hummus Ohne Tahini</p><br>
+            <p>Prep time: 20 min</p>
+          </div>
+        </button>
+        <button id="knuspriges_buchweizen_granola" class="foodIcon">
+          <div class="text-overlay">
+            <p>Knuspriges Buchweizen Granola</p><br>
+            <p>Prep time: 7 min</p>
+          </div>
+        </button>
+        <button id="overnight_oats_mit_skyr" class="foodIcon">
+          <div class="text-overlay">
+            <p>Oats Mit Skyr</p><br>
+            <p>Prep time: 12 hrs</p>
+          </div>
+        </button>
+      </div>
+    </section>
+
+  </main>
+
+  <footer  class="footer">
+    <div class="footer-container">
+
+      <div class="footer-social">
+        <a class="social-icon" href=""><i class='bx bxl-youtube'></i></a>
+        <a class="social-icon" href=""><i class='bx bxl-instagram'></i></a>
+        <a class="social-icon" href=""><i class='bx bxl-facebook'></i></a>
+        <a class="social-icon" href=""><i class='bx bxl-pinterest'></i></a>
+        
+      </div>
+
+      <div class="footer-link-container">
+        <div class="Footer-link"><a href="">Home </a></div>
+        <div class="Footer-link"><a href="">Contact </a></div>
+        <div class="Footer-link"><a href="">Delivery </a></div>
+        <div class="Footer-link"><a href="">Locations</a></div>
+    </div>
+
+    <div class="footer-copyWrite">
+      <h3>Healthy Food, Crafted With 🎔 in Germany</h3>
+      <p>&copy Mo's Kitchen - 2024</p>
+    </div>
+    </div>
+  </footer>
+  </body>
 </html>
