changed link to img on food display

--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
 
       <section class="recipeDisplay">
         <div class="recipeHeader">
-          <img src="/images/breakfast/chocolate_shell_oats.jpg" alt="Chocolate Shell Oats">
+          <img src="../images/breakfast/chocolate_shell_oats.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
          <div class="recipeInfo">
             <h3>Chocolate Shell Oats</h3>
