--- a/html/dinnerVeg.html
+++ b/html/dinnerVeg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vegan Dinner</title>
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image" href="/images/MoKitchenLogo_bg_d2232a.png" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -30,7 +31,7 @@
 
         <button id="buttonDinner" class="navButton">Dinner
           <div class="dropdownContent" id="buttonDinnerContent">
-            <a href="dinnerVeg.html" class="nonVeganOptA">Non-vegan options</a>
+            <a href="dinnerNoVeg.html" class="nonVeganOptA">Non-vegan options</a>
             <a href="dinnerVeg.html" class="veganOptA">Vegan options</a>
           </div>
         </button>
@@ -38,5 +39,37 @@
       </nav>
 
     </header>
+
+    <main>
+
+
+      
+    </main>
+
+  <footer  class="footer">
+    <div class="footer-container">
+
+      <div class="footer-social">
+        <a class="social-icon" href=""><i class='bx bxl-youtube'></i></a>
+        <a class="social-icon" href=""><i class='bx bxl-instagram'></i></a>
+        <a class="social-icon" href=""><i class='bx bxl-facebook'></i></a>
+        <a class="social-icon" href=""><i class='bx bxl-pinterest'></i></a>
+        
+      </div>
+
+      <div class="footer-link-container">
+        <div class="Footer-link"><a href="">Home </a></div>
+        <div class="Footer-link"><a href="">Contact </a></div>
+        <div class="Footer-link"><a href="">Delivery </a></div>
+        <div class="Footer-link"><a href="">Locations</a></div>
+    </div>
+
+    <div class="footer-copyWrite">
+      <h3>Healthy Food, Crafted With 🎔 in Germany</h3>
+      <p>&copy Mo's Kitchen - 2024</p>
+    </div>
+    </div>
+  </footer>
+
   </body>
 </html>
