--- a/html/lunchNoVeg.html
+++ b/html/lunchNoVeg.html
@@ -30,7 +30,7 @@
 
         <button id="buttonDinner" class="navButton">Dinner
           <div class="dropdownContent" id="buttonDinnerContent">
-            <a href="dinnerVeg.html" class="nonVeganOptA">Non-vegan options</a>
+            <a href="dinnerNoVeg.html" class="nonVeganOptA">Non-vegan options</a>
             <a href="dinnerVeg.html" class="veganOptA">Vegan options</a>
           </div>
         </button>
