added dinner veg content

--- a/html/dinnerVeg.html
+++ b/html/dinnerVeg.html
@@ -41,9 +41,50 @@
     </header>
 
     <main>
-
-
-      
+      <section class="foodDisplayDinnerVeg">
+        <h2>Lunch</h2>
+        <p id="foodDisplayP">
+        Our Vegan Options   
+        </p>
+        <div class="foodDisplayIconContainer">
+          <button id="asia_bowl_kraeutersalat" class="foodIcon">
+            <div class="text-overlay">
+              <p>Asia Bowl</p><br>
+              <p>Prep time: 15 min</p>
+            </div>
+          </button>
+          <button id="brokkoli_lauch_curry" class="foodIcon">
+            <div class="text-overlay">
+              <p>Broccoli Curry</p><br>
+              <p>Prep time: 10 min</p>
+            </div>
+          </button>
+          <button id="endiviensalat_tofu_dressing" class="foodIcon">
+            <div class="text-overlay">
+              <p>Endive salad with tofu dressing</p><br>
+              <p>Prep time: 5 min</p>
+            </div>
+          </button>
+          <button id="moehren_linsen_suppe" class="foodIcon">
+            <div class="text-overlay">
+              <p>Carrot Soup</p><br>
+              <p>Prep time: 20 min</p>
+            </div>
+          </button>
+          <button id="spinat_omelette_feta" class="foodIcon">
+            <div class="text-overlay">
+              <p>Feta Spinach Omlette</p><br>
+              <p>Prep time: 7 min</p>
+            </div>
+          </button>
+          <button id="romanesco_pfanne_fregola" class="foodIcon">
+            <div class="text-overlay">
+              <p>Stir Fry</p><br>
+              <p>Prep time: 12 hrs</p>
+            </div>
+          </button>
+        </div>
+      </section>
     </main>
 
   <footer  class="footer">
