created first hide / show function

--- a/html/dinnerNoVeg.html
+++ b/html/dinnerNoVeg.html
@@ -48,7 +48,7 @@
         Our non Vegan Options   
         </p>
         <div class="foodDisplayIconContainer">
-          <button id="carpaccio_entenbrust" class="foodIcon">
+          <button id="carpaccio_entenbrust" class="foodIcon" onclick="showDuck()">
             <div class="text-overlay">
               <p>Duck Breast Carpaccio</p><br>
               <p>Prep time: 15 min</p>
@@ -87,6 +87,54 @@
         </div>
       </section>
 
+      <section class="recipeDisplay" id="duckRecipe">
+        <div class="recipeHeader">
+          <img src="../images/dinner/carpaccio_entenbrust.jpg" alt="Duck Breast Carpaccio">
+          <div class="recipeText">
+         <div class="recipeInfo">
+            <h3>Duck Breast Carpaccio</h3>
+          <p>Carpaccio is a traditional Italian starter usually made with beef, but it works equally well with duck breast.</p>
+        </div>
+          <p>
+            Ingredients for 2 servings
+          </p>
+          <ul>
+              <li>1/2 cauliflower</li>
+              <li>1 bulb of fennel, finely sliced</li>
+              <li>salt</li>
+              <li>1 tbsp of chopped chives</li>
+              <li>1 handful of cobnuts, cut into small pieces</li>
+              <li>1 tbsp of hazelnut oil</li>
+              <li>Gressingham duck breast</li>
+              <li>100g of Romanesco florets</li>
+          </ul>
+        </div>
+        </div>
+        <div class="recipeBody">
+          <h4>
+          Preparation steps
+        </h4>
+            <ol>
+                <li>
+                  Prepare the duck breast by removing the fat and sinew with a sharp knife. Wrap the breast in cling film and place in the freezer.
+                </li>
+                <li>
+                  Remove the breast from the freezer when firm and semi-frozen, about 30 minutes. Using a very sharp knife,<br>
+                  slice across the breast into thin slices and fan evenly across 4 plates. Cover each with cling film and store in the fridge until required.
+                </li>
+                <li>
+                  For the romanesco cauliflower, use the fine setting on a grater to create a cous cous like texture.<br>
+                   Place in a bowl and season to taste with salt and hazelnut oil.
+                </li>
+                <li>
+                  To serve the carpaccio, remove the plates from the fridge an allow to stand for 5-10 minutes so they are not too cold.<br>
+                   Sprinkle the romanesco “couscous”, some fennel and the cobnuts evenly over the duck. Finish with a small drizzle of hazelnut oil and a sprinkling of chives.
+                </li>
+            </ol>
+        </div>
+      </section>
+
+
     </main>
 
     <footer  class="footer">
@@ -113,5 +161,6 @@
       </div>
       </div>
     </footer>
+  <script src="../js/mofunction.js"></script>
   </body>
 </html>
