--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay">
+      <!-- <section class="recipeDisplay">
         <div class="recipeHeader">
           <img src="../images/breakfast/chocolate_shell_oats.jpg" alt="Chocolate Shell Oats">
           <div class="recipeText">
@@ -114,7 +114,7 @@
 </li>
 </ol>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <footer  class="footer">
