added function to buttons

--- a/html/lunchVeg.html
+++ b/html/lunchVeg.html
@@ -88,7 +88,7 @@
         </div>
       </section>
 
-      <section class="recipeDisplay">
+      <section id="recipeContainer1" class="recipeDisplay">
         <div class="recipeHeader">
           <img
             src="../images/breakfast/chocolate_shell_oats.jpg"
