second button function

--- a/html/breakfastNoVeg.html
+++ b/html/breakfastNoVeg.html
@@ -42,7 +42,7 @@
 
     <main>
 
-    <section class="foodDisplayBreakfast">
+    <section class="foodDisplayNoVeg">
       <h2>Breakfast</h2>
       <p id="foodDisplayP">
       Our non Vegan Options   
