--- a/html/dinnerNoVeg.html
+++ b/html/dinnerNoVeg.html
@@ -42,7 +42,7 @@
 
     <main>
 
-      <section class="foodDisplayDinnerNoVeg">
+      <section class="foodDisplayNoVeg">
         <h2>Lunch</h2>
         <p id="foodDisplayP">
         Our non Vegan Options   
@@ -54,7 +54,7 @@
               <p>Prep time: 15 min</p>
             </div>
           </button>
-          <button id="chefsalat_steak" class="foodIcon">
+          <button id="chefsalat_steak" class="foodIcon" onclick="showSteak()">
             <div class="text-overlay">
               <p>Steak Chefsalad</p><br>
               <p>Prep time: 10 min</p>
@@ -134,6 +134,51 @@
         </div>
       </section>
 
+      <section class="recipeDisplay" id="steakSaladRecipe">
+        <div class="recipeHeader">
+          <img src="../images/dinner/chefsalat_steak.jpg" alt="Chefsalad Steak">
+          <div class="recipeText">
+         <div class="recipeInfo">
+            <h3>Steak Chefsalad</h3>
+          <p>The Steakhouse Chef Salad is what happens when you take your salad game all the way to the top!</p>
+        </div>
+          <p>
+            Ingredients for 2 servings
+          </p>
+          <ul>
+              <li>3 cups romaine, chopped</li>
+              <li>2 eggs, hard-boiled and halved</li>
+              <li>4 ounces roast beef, diced</li>
+              <li>cheddar, cubed</li>
+              <li>1 handful of cobnuts, cut into small pieces</li>
+              <li>1 cup cherry tomatoes, halved</li>
+              <li>1 Persian cucumber, sliced</li>
+              <li>1 cup croutons</li>
+              <li>Dressing and Condiments of your choice</li>
+          </ul>
+        </div>
+        </div>
+        <div class="recipeBody">
+          <h4>
+          Preparation steps
+        </h4>
+            <ol>
+                <li>
+                  Place the romaine in a large serving bowl or on a large platter. 
+                </li>
+                <li>
+                  Arrange the eggs, the beef, the cheddar, the tomatoes, the Persian cucumber,<br>
+                   and the croutons on top of the lettuce in stripes. 
+                </li>
+                <li>
+                  Season the tomatoes, the cucumber, and the eggs with the salt and the pepper. 
+                </li>
+                <li>
+                  Top with the dressing and serve!
+                </li>
+            </ol>
+        </div>
+      </section>
 
     </main>
 
