--- a/html/dinnerVeg.html
+++ b/html/dinnerVeg.html
@@ -41,7 +41,7 @@
     </header>
 
     <main>
-      <section class="foodDisplayDinnerVeg">
+      <section class="foodDisplayVeg">
         <h2>Lunch</h2>
         <p id="foodDisplayP">
         Our Vegan Options   
